--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
+    "build": " build",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@google/genai": "^1.11.0",
