--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "build": "vite build --outDir dist" 
     },
     "type": "module",
     "dependencies": {
